<?xml version="1.0"?>
<package format="2">
  <name>sensor_transform_ros</name>
  <version>0.0.0</version>
  <description>My ROS package description</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
